--- a/assets/index.css
+++ b/assets/index.css
@@ -123,6 +123,7 @@ header {
   top: 0;
   right: 0;
   background: #fff;
+  display: none;
 }
 .header-mb-logo {
   width: 33.3333333333%;
@@ -167,8 +168,28 @@ header {
   margin-bottom: 10px;
 }
 
+.sub-menu {
+  font-size: 20px;
+  line-height: 200%;
+  text-transform: capitalize;
+  padding: 10px 16px;
+  list-style: none;
+}
+.sub-menu a {
+  text-decoration: none;
+  color: #868995;
+}
+.sub-menu a i {
+  color: black;
+}
+
+.presently-menu {
+  list-style: none;
+  display: none;
+}
+
 .content {
-  width: 1349px;
+  max-width: 1349px;
   margin: 0 auto;
 }
 .content img {
@@ -181,7 +202,7 @@ header {
   justify-content: space-between;
   gap: 10px;
   padding-top: 15px;
-  width: 1349px;
+  max-width: 1349px;
   margin: 0 auto;
 }
 .featured__summer {
@@ -199,7 +220,7 @@ header {
 }
 
 .img {
-  width: 1349px;
+  max-width: 1349px;
   margin: 0 auto;
 }
 .img ul {
@@ -215,7 +236,7 @@ header {
 }
 
 .color {
-  width: 1349px;
+  max-width: 1349px;
   margin: 0 auto;
 }
 .color__menu {
@@ -232,7 +253,7 @@ header {
 }
 
 .product {
-  width: 1349px;
+  max-width: 1349px;
   margin: 0 auto;
 }
 .product__name {
@@ -252,7 +273,7 @@ header {
 }
 
 .storeproduct {
-  width: 1349px;
+  max-width: 1349px;
   padding: 10px;
   margin: 0 auto;
 }
@@ -295,7 +316,7 @@ header {
   text-decoration: none;
 }
 .producttee__img {
-  width: 1349px;
+  max-width: 1349px;
   padding-top: 24px;
   margin: 0 auto;
 }
@@ -305,4 +326,78 @@ header {
 
 .position {
   position: relative;
+}
+
+.d-none {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .header-mb {
+    display: flex;
+    padding: 10px 26px;
+    margin: 0 auto;
+  }
+  .header {
+    display: none;
+  }
+  .header-mb-menu-submenu.open {
+    display: block;
+  }
+  .featured {
+    flex-wrap: wrap;
+    padding: 0 16px;
+  }
+  .featured__summer {
+    width: 100%;
+  }
+  .featured__summer a {
+    font-size: 16px;
+  }
+  .featured__sale {
+    width: 100%;
+  }
+  .featured__sale a {
+    font-size: 16px;
+  }
+  .img ul {
+    flex-wrap: wrap;
+    padding: 0 16px;
+  }
+  .img ul li {
+    width: 50%;
+  }
+  .product {
+    padding: 0 16px;
+  }
+  .product__name {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .color__menu {
+    flex-wrap: wrap;
+    padding: 0 16px;
+  }
+  .color__menu li {
+    width: 100%;
+  }
+  .content {
+    padding: 0 16px;
+  }
+  .producttee__name {
+    padding: 10px 16px;
+    justify-content: flex-end;
+  }
+  .producttee__img {
+    padding: 0 16px;
+  }
+  .storeproduct {
+    padding: 0 16px;
+  }
+  .storeproduct__img {
+    flex-wrap: wrap;
+  }
+  .storeproduct__img li {
+    width: 50%;
+  }
 }/*# sourceMappingURL=index.css.map */
