--- a/assets/index.css
+++ b/assets/index.css
@@ -5,31 +5,28 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-header {
-  position: sticky;
-  width: 100%;
-  top: 0;
-  background: black;
-  z-index: 2;
-  padding: 16px;
-}
-
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  width: 100%;
+  top: 0;
+  z-index: 3;
   background: black;
-  padding: 10px 24px;
-  width: 1240px;
-  margin: 0 auto;
+  padding: 24px;
 }
+
 
 .header__logo {
   width: 200px;
+  height: 40px;
 }
 
 .header__logo img {
-  width: 81px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .header__menu {
